Removed redundant compare for gregorian date

--- a/Khronos/Khronos.vcxproj
+++ b/Khronos/Khronos.vcxproj
@@ -142,6 +142,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(ProjectDir)include;$(SolutionDir)gatslib\_include;$(IncludePath)</IncludePath>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(ProjectDir)include;$(SolutionDir)gatslib\_include;$(IncludePath)</IncludePath>
