--- a/Khronos/Khronos.vcxproj.filters
+++ b/Khronos/Khronos.vcxproj.filters
@@ -212,6 +212,9 @@
     <ClCompile Include="ut\ut_Khronos_004-006_gregorian_concepts.cpp">
       <Filter>Source Files\ut</Filter>
     </ClCompile>
+    <ClCompile Include="jd_to_julian.cpp">
+      <Filter>Source Files\khronos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
