--- a/Khronos/Khronos.vcxproj.filters
+++ b/Khronos/Khronos.vcxproj.filters
@@ -215,6 +215,9 @@
     <ClCompile Include="jd_to_julian.cpp">
       <Filter>Source Files\khronos</Filter>
     </ClCompile>
+    <ClCompile Include="jd_to_islamic.cpp">
+      <Filter>Source Files\khronos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
